<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Epicture</string>
    <string name="background_description">starry sky</string>
    <string name="login_button_string" tools:ignore="ButtonCase">Login to Imgur</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_add">Add</string>
    <string name="title_select">Select</string>
    <string name="title_activity_consult">ConsultActivity</string>
    <string name="image_title">Title</string>
    <string name="image_tags">Tags</string>
    <string name="images_description">Description</string>
    <string name="submit_button">Submit</string>
    <string name="add_favorites">Add to Favorites ?</string>
    <string name="default_tag_letter">P</string>
    <string name="add_details_placeholder">Description</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="toast_image_uploaded">Image Uploaded</string>
    <string name="toast_image_submit">Image submitted</string>
    <string name="toast_no_selected_image">Please select an image</string>
    <string name="search_title">search</string>
    <string name="display_all_title">Display all</string>
    <string name="with_title_title">With title</string>
    <string name="with_description_title">With description</string>
    <string name="logout_title">Logout</string>
</resources>
