<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/image_title"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="191dp" />

    <EditText
        android:id="@+id/image_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/image_tags"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="267dp" />

    <EditText
        android:id="@+id/image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/images_description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="329dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_favorites"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="395dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="445dp" />
</android.support.constraint.ConstraintLayout>