<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/add_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/add_image_button"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:scaleType="centerCrop"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/image_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/image_title"
                        android:inputType="textPersonName"
                        android:textStyle="bold"
                        android:maxLength="20"/>

                    <EditText
                        android:id="@+id/image_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_title"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:gravity="top|start"
                        android:hint="@string/add_details_placeholder"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="4"
                        android:minLines="4"
                        android:scrollbars="vertical" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_description"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/add_favorites" />

                    <Button
                        android:id="@+id/add_submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkBox"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/submit_button" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>